// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has navigationOptions 1`] = `
Object {
  "color": "#FFFFFF",
  "fontSize": 10,
  "headerBackgroundColor": "#0DC39F",
  "headerLeft": [Function],
  "headerStyle": Object {
    "backgroundColor": "#0DC39F",
    "borderBottomWidth": 0,
    "elevation": 0,
    "shadowOffset": Object {
      "height": 0,
    },
    "shadowRadius": 0,
  },
  "title": <Text>
    STEP 2/3
  </Text>,
}
`;

exports[`matches last snapshot 1`] = `
<ScrollView>
  <KeyboardFriendlyView>
    <Text>
      Choose an address for your community
    </Text>
    <Text>
      Your URL is the address that members will use to access your community online. The shorter the better!
    </Text>
    <View>
      <Text>
        What's the address for your community?
      </Text>
      <Component
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        returnKeyType="next"
        underlineColorAndroid="rgba(0,0,0,0)"
      />
    </View>
    <Button
      disabled={false}
      onPress={[Function]}
      text="Continue"
    />
  </KeyboardFriendlyView>
</ScrollView>
`;

exports[`matches last snapshot when there is an error 1`] = `
<RCTScrollView>
  <View>
    <KeyboardFriendlyView>
      <Text>
        Choose an address for your community
      </Text>
      <Text>
        Your URL is the address that members will use to access your community online. The shorter the better!
      </Text>
      <View>
        <Text>
          What's the address for your community?
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <View>
          <View />
          <View>
            <Text>
              This is an error
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </KeyboardFriendlyView>
  </View>
</RCTScrollView>
`;

exports[`validates the url 1`] = `
<RCTScrollView>
  <View>
    <KeyboardFriendlyView>
      <Text>
        Choose an address for your community
      </Text>
      <Text>
        Your URL is the address that members will use to access your community online. The shorter the better!
      </Text>
      <View>
        <Text>
          What's the address for your community?
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <View>
          <View />
          <View>
            <Text>
              Please enter a URL
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </KeyboardFriendlyView>
  </View>
</RCTScrollView>
`;

exports[`validates the url 2`] = `
<RCTScrollView>
  <View>
    <KeyboardFriendlyView>
      <Text>
        Choose an address for your community
      </Text>
      <Text>
        Your URL is the address that members will use to access your community online. The shorter the better!
      </Text>
      <View>
        <Text>
          What's the address for your community?
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <View>
          <View />
          <View>
            <Text>
              URLs must have between 2 and 40 characters, and can only have lower case letters, numbers, and dashes.
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </KeyboardFriendlyView>
  </View>
</RCTScrollView>
`;
